@@ -3,6 +3,7 @@
 *Ver3.21 : 2019/xx/xx
 
 -起動時のパス解析を更新しました。
+-【plugin】JavaScriptプラグインを更新。
 －【Windows/httpd】adiary.conf.cgiが存在しない時、自動生成するようにしました。
 -【Fix】JavaScript強制更新用queryが一部正しくない。
 -【Fix/デザイン編集】単一記事表示の編集リンクが移動できてしまう。
